Fix header fonts in blog posts again
The header font sizes are too big but can't be changed for the entire
site because of their use in the /about page.

--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -53,6 +53,12 @@ h2, h3 {
   margin: 0;
 }
 
+article h2, h3 {
+  font-size: 2.6rem;
+  line-height: 2.1rem;
+  margin: 0;
+}
+
 .blog-index-titles {
   font-size: 2.1rem;
   a:hover {
